--- a/test-api/Cargo.toml
+++ b/test-api/Cargo.toml
@@ -13,3 +13,4 @@ firestore-db-and-auth = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.57"
 futures-util = "0.3.30"
+serde_json = "1.0.114"
