--- a/test-api/Cargo.toml
+++ b/test-api/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.57"
 futures-util = "0.3.30"
 serde_json = "1.0.114"
+actix-cors = "0.7.0"
