--- a/test-api/Cargo.toml
+++ b/test-api/Cargo.toml
@@ -15,3 +15,7 @@ thiserror = "1.0.57"
 futures-util = "0.3.30"
 serde_json = "1.0.114"
 actix-cors = "0.7.0"
+actix-web-actors = "4.3.0"
+actix = "0.13.3"
+actix-rt = "2.9.0"
+rand = "0.8.5"
